--- a/templates/index.html
+++ b/templates/index.html
@@ -139,19 +139,20 @@ body {
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible fade show" role="alert">
           <strong>Message :</strong>{{ message }}
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="$(this).parent().fadeOut();">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         {% endfor %} 
       </div>
       <script type="text/javascript"> 
-          $(function(){
-          setTimeout(function(){
-              $("#alert-message").hide();
-              }, 2000);
-            });
-          </script>
+        $(function(){
+            setTimeout(function(){
+              $("#alert-message").fadeOut();
+            }, 500);
+        });
+      </script>
+    
       <div class="screen">
         <div class="screen__content">
         
