changes to push

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -20,7 +20,7 @@
             <button type="submit">Submit</button>
           </form>
         </div> -->
-        <h1> <i class="fa fa-book fa-lg"></i> BOOK MANAGEMENT </h1>
+        <h1> <i class="fa fa-book fa-1x"></i> BOOK MANAGEMENT </h1>
       </header>
 
       <aside class="sidenav">
@@ -32,7 +32,7 @@
         </div>
         <ul class="sidenav__list">
           <li class="sidenav__list-item"><a href="/dashboard/"><i class="fa fa-tachometer"></i> Dashboard</a></li>
-          <li class="sidenav__list-item"><a href="/addbook/"><i class="fa fa-book"></i> Add Book</a></li>
+          <!-- <li class="sidenav__list-item"><a href="/addbook/"><i class="fa fa-book"></i> Add Book</a></li> -->
           <li class="sidenav__list-item"><a href="/viewstudents/"><i class="fa fa-address-book"></i> View Patrons</a></li>
           <li class="sidenav__list-item"><a href="/addstudent/"><i class="fa fa-users"></i> Add Patron</a></li>
           <li class="sidenav__list-item"><a href="/viewissuedbook/"><i class="fa fa-search"></i> View Issued Books</a></li>
