--- a/templates/addstudent.html
+++ b/templates/addstudent.html
@@ -55,7 +55,7 @@
 <body>
   <div class="grid-container">
   <header class="header">
-    <h1> <i class="fa fa-users fa-lg"></i> PATRON MANAGEMENT</h1>
+    <h1> <i class="fa fa-users fa-1x"></i> PATRON MANAGEMENT</h1>
   </header>
   <aside class="sidenav">
     <a href="/dashboard/">
@@ -68,7 +68,7 @@
       <li class="sidenav__list-item"><a href="/dashboard/"><i class="fa fa-tachometer"></i> Dashboard</a></li>
       <li class="sidenav__list-item"><a href="/addbook/"><i class="fa fa-book"></i> Add Book</a></li>
       <li class="sidenav__list-item"><a href="/viewstudents/"><i class="fa fa-address-book"></i> View Patrons</a></li>
-      <li class="sidenav__list-item"><a href="/addstudent/"><i class="fa fa-users"></i> Add Patron</a></li>
+      <!-- <li class="sidenav__list-item"><a href="/addstudent/"><i class="fa fa-users"></i> Add Patron</a></li> -->
       <li class="sidenav__list-item"><a href="/viewissuedbook/"><i class="fa fa-search"></i> View Issued Books</a></li>
       <li class="sidenav__list-item"><a href="/bookissue/"><i class="fa fa-bookmark"></i> Issue Book</a></li>
       <li class="sidenav__list-item"><a href="/returnbook/"><i class="fa fa-undo"></i> Return Book</a></li>
