--- a/static/main.css
+++ b/static/main.css
@@ -10403,19 +10403,22 @@ body {
 
 /* Give every child element its grid name */
 .header {
-  grid-area: header;
+  
   display: flex;
-  align-items: center !important;
-  justify-content: space-between;
-  background-color: #14364d!important;
-  width:100vw;
-  padding-right: 20%;
-  padding-left: 20%;
-}
+  background-color: #14364d !important;
+  width: 100vw;
+ 
+  height: 300px !important;
+} 
 .header h1 {
-  margin: 0 auto;
-  text-align: center;
-  padding: 10px;
+  text-align: left;
+  padding-bottom: 10px;
+}
+
+.header h2 {
+  text-align: right;
+  padding-bottom: 10px;
+  margin-left: 20%;
 }
 
 /* Make room for the menu icon on mobile */
@@ -10678,3 +10681,42 @@ padding: 10px;
     padding-left: 20%;
   }
 }
+
+.css-btn {
+	color: #FFFFFF;
+	font-size: 16px;
+	border-radius: 5px;
+	border: solid 1px #3866a3;
+	text-shadow: 1px 1px 0px #528ECC;
+	box-shadow: inset 1px 1px 0px 0px #BBDAF7;
+	text-decoration: none;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+	font-family: Arial;
+	font-weight: bold;
+	background: linear-gradient(180deg, #63B8EE 10%, #468CCF 100%);
+	display: inline-flex;
+	align-items: center;
+	padding: 0;
+}
+.css-btn:hover {
+	background: linear-gradient(180deg, #468CCF 10%, #63B8EE 100%);
+}
+.css-btn-text {
+	position: relative;
+	padding: 10px 18px;
+}
+.css-btn-icon {
+	position: relative;
+	border-right: 1px solid #ffffff29;
+	box-shadow: inset rgb(0 0 0 / 14%) -1px 0 0;
+	padding: 10px 10px;
+	color: #000000;
+}
+.css-btn-icon > i {
+	position: relative;
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 26px;
+} 
