--- a/templates/returnbook.html
+++ b/templates/returnbook.html
@@ -30,7 +30,7 @@
           <li class="sidenav__list-item"><a href="/addstudent/"><i class="fa fa-users"></i> Add Patron</a></li>
           <li class="sidenav__list-item"><a href="/viewissuedbook/"><i class="fa fa-search"></i> View Issued Books</a></li>
           <li class="sidenav__list-item"><a href="/bookissue/"><i class="fa fa-bookmark"></i> Issue Book</a></li>
-          <li class="sidenav__list-item"><a href="/returnbook/"><i class="fa fa-undo"></i> Return Book</a></li>
+          <!-- <li class="sidenav__list-item"><a href="/returnbook/"><i class="fa fa-undo"></i> Return Book</a></li> -->
           <li class="sidenav__list-item"><a href="/HandleLogout/"><i class="fa fa-sign-out"></i> Log Out</a></li>
         </ul>
       </aside>
